# manga-scanner

./: .gitignore  README.md  characters.json  config.yaml  pyproject.toml
.claude/: settings.local.json
docs/: architecture.md
fonts/: FONTS.txt
refinement/: TICKET-001-project-skeleton.md  TICKET-002-shared-data-types.md  TICKET-003-configuration-system.md  TICKET-004-pytorch-cuda-verification.md  TICKET-005-yolov8-text-detection-module.md  TICKET-006-reading-order-sorting.md  TICKET-007-binary-mask-generation.md  TICKET-008-iopaint-install-and-api-verification.md  TICKET-009-inpainting-wrapper.md  TICKET-010-manga-ocr-wrapper.md  TICKET-011-crop-extraction.md  TICKET-012-ollama-install-and-model-pull.md  TICKET-013-character-profile-schema.md  TICKET-014-llm-prompt-builder.md  TICKET-015-translation-wrapper-and-retry.md  TICKET-016-font-selection-and-packaging.md  TICKET-017-text-fitting-and-wrapping.md  TICKET-018-overlay-renderer.md  TICKET-019-output-path-management.md  TICKET-020-vram-lifecycle-management.md  TICKET-021-single-page-orchestrator.md  TICKET-022-batch-chapter-processor.md  TICKET-023-cli-entry-point.md  TICKET-024-unit-tests.md  TICKET-025-integration-test.md  TICKET-026-pipeline-quality-benchmark.md
scripts/: benchmark.py  check_hardware.py  run_mit.sh
src/manga_scanner/: cli.py  config.py  output.py  types.py  vram.py
tests/: test_benchmark.py  test_benchmark_images.py  test_config.py  test_detection.py  test_ocr.py  test_pipeline.py  test_skeleton.py  test_types.py  test_typesetting.py
tests/fixtures/: generate_fixtures.py
(+16 files in other folders)
