[project]
name = "manga-scanner"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic-settings>=2.14.2",
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/manga_scanner"]

[project.scripts]
manga-scan = "manga_scanner.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
